# swelter

./: Cargo.toml  README.md  meson.build  org.gnome.Swelter.json
data/: meson.build  org.gnome.Swelter.appdata.xml.in  org.gnome.Swelter.desktop.in  org.gnome.Swelter.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  area.rs  config.rs  main.rs  meson.build  swelter.gresource.xml  window.rs  window.ui
src/sensors/: hwmons.rs  mod.rs
