[package]
name = "swelter"
version = "0.1.0"
edition = "2018"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.4", package = "gtk4" }
tokio = { version = "~1.16", features = ["full"] }
futures = "0.3"
libmedium = "0.6"
async-timer = "0.7"
once_cell = "1.9"
glib-macros = "0.15"

